[project]
name = "beekeeper"
authors = [
  { name = "Sofia Miñano", email = "s.minano@ucl.ac.uk" },
  { name = "Nikoloz Sirmpilatze", email = "niko.sirbiladze@gmail.com" },
  { name = "Sam Cunliffe", email = "s.cunliffe@ucl.ac.uk" },
  { name = "Adam Tyson", email = "code@adamltyson.com" },
]
description = "Managing video metadata for animal behaviour experiments"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]

license = { text = "BSD-3-Clause" }

dependencies = [
  "tables",
  "blosc2",
  "numpy",
  # "pillow",
  "pandas",
  "dash",
  "dash-bootstrap-components",
  "PyYAML",
  "openpyxl",
  # "defusedxml",
]  # TODO: review dependencies. Update to latest dash syntax

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/SainsburyWellcomeCentre/beekeeper"
"Bug tracker" = "https://github.com/SainsburyWellcomeCentre/beekeeper/issues"
"Documentation" = "https://SainsburyWellcomeCentre.github.io/beekeeper"
"Source code" = "https://github.com/SainsburyWellcomeCentre/beekeeper"
"User support" = "https://github.com/SainsburyWellcomeCentre/beekeeper/issues"

[project.scripts]
start-beekeeper = "beekeeper.app:startbeekeeper"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "dash[testing]",
  "tox",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  "setuptools-scm",
  "types-PyYAML",
  "pandas-stubs",
  "types-Pillow",
]  # TODO update with latest cookiecutter


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["beekeeper*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
addopts = "--cov=beekeeper"

[tool.black]
target-version = ['py39', 'py310']
skip-string-normalization = false
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.ruff]
line-length = 88
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  "docs/",
  "docs/source/",
]

[[tool.mypy.overrides]]
module = [
  "dash.*",
  "dash_bootstrap_components.*",
  "h5py.*",
  "matplotlib.*",
  "plotly.*",
  "cv2.*",
  "shapely.*",
]
ignore_missing_imports = true
